--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,10 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>WinXP - Windows XP in React</title>
+    <title>Felipe Sousa Nunes</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Projeto em react.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
