--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,18 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Felipe Sousa Nunes</title>
+            <!-- Favicon-->
+            <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/assets/favicon.ico" />
+            <!-- Custom Google font-->
+            <link rel="preconnect" href="https://fonts.googleapis.com" />
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+            <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@100;200;300;400;500;600;700;800;900&amp;display=swap" rel="stylesheet" />
+            <!-- Bootstrap icons-->
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
+            <!-- Core theme CSS (includes Bootstrap)-->
+            <link href="%PUBLIC_URL%/css/styles.css" rel="stylesheet" />
   </head>
-  <body>
+  <body class="d-flex flex-column h-100">
     <noscript>Projeto em react.</noscript>
     <div id="root"></div>
     <!--
