--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta name="og:image" content="https://i.imgur.com/4miokE2.jpg" />
-    <meta name="og:title" content="WinXP - Windows XP in React" />
+    <meta name="og:title" content="Felipe Nunes - Curriculo" />
     <meta
       name="og:description"
-      content="Windows XP in React and Hooks! Try Minesweeper, Internet Explorer, Notepad in your browser!"
+      content="Curriculo desenvolvido em React - Felipe Sousa Nunes"
     />
     <meta
       name="description"
-      content="Windows XP in React and Hooks! Try Minesweeper, Internet Explorer, Notepad in your browser!"
+      content="Curriculo desenvolvido em React - Felipe Sousa Nunes"
     />
     <meta charset="utf-8" />
     <meta
@@ -22,8 +22,6 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Felipe Sousa Nunes</title>
-            <!-- Favicon-->
-            <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/assets/favicon.ico" />
             <!-- Custom Google font-->
             <link rel="preconnect" href="https://fonts.googleapis.com" />
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -36,15 +34,5 @@
   <body class="d-flex flex-column h-100">
     <noscript>Projeto em react.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
